--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </a>
                  </div>
             </div>
-            <div class="float-right">
+            <div class="float-right" style="display: none;">
                 <p class="nav" style="font-size:11px">Имя пользователя(Login)</p>
             </div>
         </div>
@@ -70,7 +70,7 @@
                                 </div>
 
                                 <!-- Тут будет дополнительное меню (если будет нужен) -->
-                                <!--<div id="STATUS_EXT" data-role="buttongroup" class="k-widget k-button-group" role="group" tabindex="0" aria-disabled="false">
+<!--                                <div id="STATUS_EXT" data-role="buttongroup" class="k-widget k-button-group" role="group" tabindex="0" aria-disabled="false">
                                     <span title="" data-value="1" data-status="1" aria-pressed="true" role="button" class="k-button k-state-active k-state-focused">Что-то 1</span>
                                     <span title="" data-value="2" data-status="1" aria-pressed="false" role="button" class="k-button">Что-то 2</span>
                                     <span title="" data-value="3" data-status="0" aria-pressed="false" role="button" class="k-button k-state-disabled">Что-то 3</span>
@@ -78,9 +78,9 @@
                                 </div>-->
 
                                 <!--<div id="STATUS_3" data-role="buttongroup" class="k-widget k-button-group" role="group" tabindex="0" aria-disabled="false">
-                                    <span title="Н.з.выдан, Н.з.выполняется" data-value="0" aria-pressed="false" role="button" class="k-button">В работе</span>
-                                    <span title="Н.з. в ожидании" data-value="1" aria-pressed="false" role="button" class="k-button">Ожидание</span>
-                                    <span title="Н.з. выдано, Н.з. выполняется, Н.з. в Ожидании" data-value="2" aria-pressed="true" role="button" class="k-button k-state-active">Все</span>
+                                    <span data-value="0" aria-pressed="false" role="button" class="k-button" title="">В работе</span>
+                                    <span data-value="1" aria-pressed="false" role="button" class="k-button" title="">Ожидание</span>
+                                    <span data-value="2" aria-pressed="true" role="button" class="k-button k-state-active" title="">Все</span>
                                 </div>-->
                             </div>
 
@@ -200,7 +200,7 @@
     <li class="k-item k-state-default" role="menuitem" data-uid="a8a79987-58d4-4c1c-aac7-0ee2988f9c8a"><span class="k-link k-menu-link"><span data-code="5"><span class="k-icon k-i-copy"></span>Коп. URL</span></span></li><li class="k-item k-state-default k-last" role="menuitem" data-uid="8281976b-971c-4055-a60a-219f088cc563"><span class="k-link k-menu-link"><span data-code="6"><span class="k-icon k-i-copy"></span>Коп. общую инф-ю</span></span></li>
 </ul>-->
 
-        <div id="test" class="context-menu-container k-animation-container" style="display: none; width: 226px; height: 423px; overflow: visible; position: absolute; /*top: 254px;*/ z-index: 10002; /*left: 100px;*/" aria-hidden="true">
+        <div id="itemContextMenu" class="context-menu-container k-animation-container" style="display: none; width: 226px; height: 423px; overflow: visible; position: absolute; /*top: 254px;*/ z-index: 10002; /*left: 100px;*/" aria-hidden="true">
             <ul id="gridMenu" data-role="contextmenu" class="k-widget k-reset k-header k-menu k-context-menu k-popup k-group k-menu-vertical" tabindex="0" role="menubar" style="display: block; position: absolute; font-size: 11px; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-stretch: 100%; font-style: normal; font-weight: 400; line-height: normal; opacity: 1;" aria-hidden="true">
                 <li class="k-item k-state-default k-first" role="menuitem" data-uid="e7a90a19-e0c0-4bd0-8a0d-79471675c161">
                     <span class="k-link k-menu-link">
@@ -236,9 +236,9 @@
 
 		<!-- Для пользователей -->
 		<div id="workersContextMenu" class="context-menu-container k-animation-container" style="display: none; width: 226px; height: 423px; overflow: visible; position: absolute; /*top: 254px;*/ z-index: 10002; /*left: 100px;*/" aria-hidden="true">
-            <ul id="gridMenu" data-role="contextmenu" class="k-widget k-reset k-header k-menu k-context-menu k-popup k-group k-menu-vertical" tabindex="0" role="menubar" style="display: block; position: absolute; font-size: 11px; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-stretch: 100%; font-style: normal; font-weight: 400; line-height: normal; opacity: 1;" aria-hidden="true">
-                <li class="k-item k-state-default k-first" role="menuitem" data-uid="e7a90a19-e0c0-4bd0-8a0d-79471675c161">
-                    <span id="addNewWorker" class="k-link k-menu-link" onclick="addNewWorker();">
+            <ul data-role="contextmenu" class="k-widget k-reset k-header k-menu k-context-menu k-popup k-group k-menu-vertical" tabindex="0" role="menubar" style="display: block; position: absolute; font-size: 11px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-stretch: 100%; font-style: normal; font-weight: 400; line-height: normal; opacity: 1;" aria-hidden="true">
+                <li id="addNewWorker" class="k-item k-state-default k-first" role="menuitem" data-uid="" onclick="addNewWorker();">
+                    <span class="k-link k-menu-link">
                         <span data-code="1">
                             <span class="k-icon k-i-file-add"></span> Добавить нового 
                         </span>
